--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>VoiceProject</groupId>
-  <artifactId>VoiceProject</artifactId>
+  <groupId>ecust</groupId>
+  <artifactId>GasBigData</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>VoiceProject Maven Webapp</name>
@@ -56,11 +56,22 @@
           <artifactId>spring-aop</artifactId>
           <version>${spring.version}</version>
       </dependency>
-      <dependency>
+        <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context-support</artifactId>
           <version>${spring.version}</version>
-      </dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
 
       <!-- mybatis核心包 -->
       <dependency>
@@ -210,6 +221,6 @@
         </dependency>
   </dependencies>
   <build>
-    <finalName>VoiceProject</finalName>
+    <finalName>GasBigData</finalName>
   </build>
 </project>
