--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>GasBigData</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>VoiceProject Maven Webapp</name>
+  <name>GasBigData Maven Webapp</name>
   <url>http://maven.apache.org</url>
     <properties>
         <!-- spring版本号 -->
