--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
           <artifactId>spring-context-support</artifactId>
           <version>${spring.version}</version>
       </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
       <!-- mybatis核心包 -->
       <dependency>
@@ -208,7 +213,13 @@
             <artifactId>hive-contrib</artifactId>
             <version>${hive.version}</version>
         </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
   <build>
     <finalName>VoiceProject</finalName>
   </build>
